--- a/preview.html
+++ b/preview.html
@@ -607,6 +607,8 @@
 
         <div class="icons__item" data-name="film"><i class="mdi mdi-film"></i> mdi-film</div>
 
+        <div class="icons__item" data-name="filmstrip-off"><i class="mdi mdi-filmstrip-off"></i> mdi-filmstrip-off</div>
+
         <div class="icons__item" data-name="filmstrip"><i class="mdi mdi-filmstrip"></i> mdi-filmstrip</div>
 
         <div class="icons__item" data-name="filter-outline"><i class="mdi mdi-filter-outline"></i> mdi-filter-outline</div>
