--- a/preview.html
+++ b/preview.html
@@ -57,6 +57,10 @@
         font-size: 14px;
         color: #999;
     }
+
+    .mdi:before{
+        font-size:24px!important;
+    }
     </style>
     <link href="materialdesignicons.css" media="all" rel="stylesheet" type="text/css" />
 </head>
@@ -117,6 +121,8 @@
 
         <div class="icons__item" data-name="alert"><i class="mdi mdi-alert"></i> mdi-alert</div>
 
+        <div class="icons__item" data-name="ambulance"><i class="mdi mdi-ambulance"></i> mdi-ambulance</div>
+
         <div class="icons__item" data-name="android-debug-bridge"><i class="mdi mdi-android-debug-bridge"></i> mdi-android-debug-bridge</div>
 
         <div class="icons__item" data-name="android"><i class="mdi mdi-android"></i> mdi-android</div>
@@ -173,9 +179,13 @@
 
         <div class="icons__item" data-name="arrow-up"><i class="mdi mdi-arrow-up"></i> mdi-arrow-up</div>
 
+        <div class="icons__item" data-name="attachment"><i class="mdi mdi-attachment"></i> mdi-attachment</div>
+
         <div class="icons__item" data-name="auto-fix"><i class="mdi mdi-auto-fix"></i> mdi-auto-fix</div>
 
         <div class="icons__item" data-name="auto-upload"><i class="mdi mdi-auto-upload"></i> mdi-auto-upload</div>
+
+        <div class="icons__item" data-name="backup-restore"><i class="mdi mdi-backup-restore"></i> mdi-backup-restore</div>
 
         <div class="icons__item" data-name="bank"><i class="mdi mdi-bank"></i> mdi-bank</div>
 
@@ -253,6 +263,8 @@
 
         <div class="icons__item" data-name="bike"><i class="mdi mdi-bike"></i> mdi-bike</div>
 
+        <div class="icons__item" data-name="bio"><i class="mdi mdi-bio"></i> mdi-bio</div>
+
         <div class="icons__item" data-name="blinds"><i class="mdi mdi-blinds"></i> mdi-blinds</div>
 
         <div class="icons__item" data-name="block-helper"><i class="mdi mdi-block-helper"></i> mdi-block-helper</div>
@@ -262,6 +274,8 @@
         <div class="icons__item" data-name="bluetooth-audio"><i class="mdi mdi-bluetooth-audio"></i> mdi-bluetooth-audio</div>
 
         <div class="icons__item" data-name="bluetooth-connect"><i class="mdi mdi-bluetooth-connect"></i> mdi-bluetooth-connect</div>
+
+        <div class="icons__item" data-name="bluetooth-settings"><i class="mdi mdi-bluetooth-settings"></i> mdi-bluetooth-settings</div>
 
         <div class="icons__item" data-name="bluetooth"><i class="mdi mdi-bluetooth"></i> mdi-bluetooth</div>
 
@@ -353,6 +367,8 @@
 
         <div class="icons__item" data-name="car"><i class="mdi mdi-car"></i> mdi-car</div>
 
+        <div class="icons__item" data-name="carrot"><i class="mdi mdi-carrot"></i> mdi-carrot</div>
+
         <div class="icons__item" data-name="cart-outline"><i class="mdi mdi-cart-outline"></i> mdi-cart-outline</div>
 
         <div class="icons__item" data-name="cart"><i class="mdi mdi-cart"></i> mdi-cart</div>
@@ -372,6 +388,8 @@
         <div class="icons__item" data-name="cellphone-link-off"><i class="mdi mdi-cellphone-link-off"></i> mdi-cellphone-link-off</div>
 
         <div class="icons__item" data-name="cellphone-link"><i class="mdi mdi-cellphone-link"></i> mdi-cellphone-link</div>
+
+        <div class="icons__item" data-name="cellphone-settings"><i class="mdi mdi-cellphone-settings"></i> mdi-cellphone-settings</div>
 
         <div class="icons__item" data-name="cellphone"><i class="mdi mdi-cellphone"></i> mdi-cellphone</div>
 
@@ -451,10 +469,6 @@
 
         <div class="icons__item" data-name="coffee"><i class="mdi mdi-coffee"></i> mdi-coffee</div>
 
-        <div class="icons__item" data-name="cog-box"><i class="mdi mdi-cog-box"></i> mdi-cog-box</div>
-
-        <div class="icons__item" data-name="cog"><i class="mdi mdi-cog"></i> mdi-cog</div>
-
         <div class="icons__item" data-name="coin"><i class="mdi mdi-coin"></i> mdi-coin</div>
 
         <div class="icons__item" data-name="color-helper"><i class="mdi mdi-color-helper"></i> mdi-color-helper</div>
@@ -494,6 +508,8 @@
         <div class="icons__item" data-name="cup"><i class="mdi mdi-cup"></i> mdi-cup</div>
 
         <div class="icons__item" data-name="currency-btc"><i class="mdi mdi-currency-btc"></i> mdi-currency-btc</div>
+
+        <div class="icons__item" data-name="currency-usd"><i class="mdi mdi-currency-usd"></i> mdi-currency-usd</div>
 
         <div class="icons__item" data-name="database-minus"><i class="mdi mdi-database-minus"></i> mdi-database-minus</div>
 
@@ -558,6 +574,8 @@
         <div class="icons__item" data-name="eye-off"><i class="mdi mdi-eye-off"></i> mdi-eye-off</div>
 
         <div class="icons__item" data-name="eye"><i class="mdi mdi-eye"></i> mdi-eye</div>
+
+        <div class="icons__item" data-name="eyedropper-variant"><i class="mdi mdi-eyedropper-variant"></i> mdi-eyedropper-variant</div>
 
         <div class="icons__item" data-name="eyedropper"><i class="mdi mdi-eyedropper"></i> mdi-eyedropper</div>
 
@@ -637,6 +655,8 @@
 
         <div class="icons__item" data-name="flip-to-front"><i class="mdi mdi-flip-to-front"></i> mdi-flip-to-front</div>
 
+        <div class="icons__item" data-name="floppy"><i class="mdi mdi-floppy"></i> mdi-floppy</div>
+
         <div class="icons__item" data-name="flower"><i class="mdi mdi-flower"></i> mdi-flower</div>
 
         <div class="icons__item" data-name="folder-account"><i class="mdi mdi-folder-account"></i> mdi-folder-account</div>
@@ -687,6 +707,8 @@
 
         <div class="icons__item" data-name="fullscreen"><i class="mdi mdi-fullscreen"></i> mdi-fullscreen</div>
 
+        <div class="icons__item" data-name="gamepad-variant"><i class="mdi mdi-gamepad-variant"></i> mdi-gamepad-variant</div>
+
         <div class="icons__item" data-name="gamepad"><i class="mdi mdi-gamepad"></i> mdi-gamepad</div>
 
         <div class="icons__item" data-name="gas-station"><i class="mdi mdi-gas-station"></i> mdi-gas-station</div>
@@ -713,6 +735,8 @@
 
         <div class="icons__item" data-name="google-glass"><i class="mdi mdi-google-glass"></i> mdi-google-glass</div>
 
+        <div class="icons__item" data-name="google-maps"><i class="mdi mdi-google-maps"></i> mdi-google-maps</div>
+
         <div class="icons__item" data-name="google-pages"><i class="mdi mdi-google-pages"></i> mdi-google-pages</div>
 
         <div class="icons__item" data-name="google-play"><i class="mdi mdi-google-play"></i> mdi-google-play</div>
@@ -730,6 +754,8 @@
         <div class="icons__item" data-name="hanger"><i class="mdi mdi-hanger"></i> mdi-hanger</div>
 
         <div class="icons__item" data-name="hangouts"><i class="mdi mdi-hangouts"></i> mdi-hangouts</div>
+
+        <div class="icons__item" data-name="harddisk"><i class="mdi mdi-harddisk"></i> mdi-harddisk</div>
 
         <div class="icons__item" data-name="headphones-box"><i class="mdi mdi-headphones-box"></i> mdi-headphones-box</div>
 
@@ -925,6 +951,8 @@
 
         <div class="icons__item" data-name="microphone-outline"><i class="mdi mdi-microphone-outline"></i> mdi-microphone-outline</div>
 
+        <div class="icons__item" data-name="microphone-settings"><i class="mdi mdi-microphone-settings"></i> mdi-microphone-settings</div>
+
         <div class="icons__item" data-name="microphone"><i class="mdi mdi-microphone"></i> mdi-microphone</div>
 
         <div class="icons__item" data-name="minus-box"><i class="mdi mdi-minus-box"></i> mdi-minus-box</div>
@@ -1033,9 +1061,17 @@
 
         <div class="icons__item" data-name="ornament"><i class="mdi mdi-ornament"></i> mdi-ornament</div>
 
+        <div class="icons__item" data-name="package-down"><i class="mdi mdi-package-down"></i> mdi-package-down</div>
+
+        <div class="icons__item" data-name="package-up"><i class="mdi mdi-package-up"></i> mdi-package-up</div>
+
+        <div class="icons__item" data-name="package"><i class="mdi mdi-package"></i> mdi-package</div>
+
         <div class="icons__item" data-name="pandora"><i class="mdi mdi-pandora"></i> mdi-pandora</div>
 
         <div class="icons__item" data-name="paper-cut-vertical"><i class="mdi mdi-paper-cut-vertical"></i> mdi-paper-cut-vertical</div>
+
+        <div class="icons__item" data-name="paperclip"><i class="mdi mdi-paperclip"></i> mdi-paperclip</div>
 
         <div class="icons__item" data-name="parking"><i class="mdi mdi-parking"></i> mdi-parking</div>
 
@@ -1055,8 +1091,6 @@
 
         <div class="icons__item" data-name="phone-bluetooth"><i class="mdi mdi-phone-bluetooth"></i> mdi-phone-bluetooth</div>
 
-        <div class="icons__item" data-name="phone-dots"><i class="mdi mdi-phone-dots"></i> mdi-phone-dots</div>
-
         <div class="icons__item" data-name="phone-forward"><i class="mdi mdi-phone-forward"></i> mdi-phone-forward</div>
 
         <div class="icons__item" data-name="phone-hangup"><i class="mdi mdi-phone-hangup"></i> mdi-phone-hangup</div>
@@ -1069,11 +1103,15 @@
 
         <div class="icons__item" data-name="phone-paused"><i class="mdi mdi-phone-paused"></i> mdi-phone-paused</div>
 
+        <div class="icons__item" data-name="phone-settings"><i class="mdi mdi-phone-settings"></i> mdi-phone-settings</div>
+
         <div class="icons__item" data-name="phone"><i class="mdi mdi-phone"></i> mdi-phone</div>
 
         <div class="icons__item" data-name="pig"><i class="mdi mdi-pig"></i> mdi-pig</div>
 
         <div class="icons__item" data-name="pill"><i class="mdi mdi-pill"></i> mdi-pill</div>
+
+        <div class="icons__item" data-name="pin-off"><i class="mdi mdi-pin-off"></i> mdi-pin-off</div>
 
         <div class="icons__item" data-name="pin"><i class="mdi mdi-pin"></i> mdi-pin</div>
 
@@ -1111,6 +1149,10 @@
 
         <div class="icons__item" data-name="polymer"><i class="mdi mdi-polymer"></i> mdi-polymer</div>
 
+        <div class="icons__item" data-name="power-settings"><i class="mdi mdi-power-settings"></i> mdi-power-settings</div>
+
+        <div class="icons__item" data-name="power"><i class="mdi mdi-power"></i> mdi-power</div>
+
         <div class="icons__item" data-name="printer"><i class="mdi mdi-printer"></i> mdi-printer</div>
 
         <div class="icons__item" data-name="puzzle"><i class="mdi mdi-puzzle"></i> mdi-puzzle</div>
@@ -1133,11 +1175,23 @@
 
         <div class="icons__item" data-name="recycle"><i class="mdi mdi-recycle"></i> mdi-recycle</div>
 
+        <div class="icons__item" data-name="redo-variant"><i class="mdi mdi-redo-variant"></i> mdi-redo-variant</div>
+
+        <div class="icons__item" data-name="redo"><i class="mdi mdi-redo"></i> mdi-redo</div>
+
         <div class="icons__item" data-name="refresh"><i class="mdi mdi-refresh"></i> mdi-refresh</div>
 
         <div class="icons__item" data-name="relative-scale"><i class="mdi mdi-relative-scale"></i> mdi-relative-scale</div>
 
+        <div class="icons__item" data-name="remote"><i class="mdi mdi-remote"></i> mdi-remote</div>
+
         <div class="icons__item" data-name="rename-box"><i class="mdi mdi-rename-box"></i> mdi-rename-box</div>
+
+        <div class="icons__item" data-name="repeat-once"><i class="mdi mdi-repeat-once"></i> mdi-repeat-once</div>
+
+        <div class="icons__item" data-name="repeat"><i class="mdi mdi-repeat"></i> mdi-repeat</div>
+
+        <div class="icons__item" data-name="replay"><i class="mdi mdi-replay"></i> mdi-replay</div>
 
         <div class="icons__item" data-name="reply-all"><i class="mdi mdi-reply-all"></i> mdi-reply-all</div>
 
@@ -1177,6 +1231,10 @@
 
         <div class="icons__item" data-name="server"><i class="mdi mdi-server"></i> mdi-server</div>
 
+        <div class="icons__item" data-name="settings-box"><i class="mdi mdi-settings-box"></i> mdi-settings-box</div>
+
+        <div class="icons__item" data-name="settings"><i class="mdi mdi-settings"></i> mdi-settings</div>
+
         <div class="icons__item" data-name="shape-plus"><i class="mdi mdi-shape-plus"></i> mdi-shape-plus</div>
 
         <div class="icons__item" data-name="share-variant"><i class="mdi mdi-share-variant"></i> mdi-share-variant</div>
@@ -1207,11 +1265,19 @@
 
         <div class="icons__item" data-name="soundcloud"><i class="mdi mdi-soundcloud"></i> mdi-soundcloud</div>
 
+        <div class="icons__item" data-name="source-fork"><i class="mdi mdi-source-fork"></i> mdi-source-fork</div>
+
+        <div class="icons__item" data-name="source-pull"><i class="mdi mdi-source-pull"></i> mdi-source-pull</div>
+
         <div class="icons__item" data-name="speaker-off"><i class="mdi mdi-speaker-off"></i> mdi-speaker-off</div>
 
         <div class="icons__item" data-name="speaker"><i class="mdi mdi-speaker"></i> mdi-speaker</div>
 
+        <div class="icons__item" data-name="spellcheck"><i class="mdi mdi-spellcheck"></i> mdi-spellcheck</div>
+
         <div class="icons__item" data-name="spotify"><i class="mdi mdi-spotify"></i> mdi-spotify</div>
+
+        <div class="icons__item" data-name="star-circle"><i class="mdi mdi-star-circle"></i> mdi-star-circle</div>
 
         <div class="icons__item" data-name="star-half"><i class="mdi mdi-star-half"></i> mdi-star-half</div>
 
@@ -1234,6 +1300,8 @@
         <div class="icons__item" data-name="swap-horizontal"><i class="mdi mdi-swap-horizontal"></i> mdi-swap-horizontal</div>
 
         <div class="icons__item" data-name="swap-vertical"><i class="mdi mdi-swap-vertical"></i> mdi-swap-vertical</div>
+
+        <div class="icons__item" data-name="sword"><i class="mdi mdi-sword"></i> mdi-sword</div>
 
         <div class="icons__item" data-name="sync-alert"><i class="mdi mdi-sync-alert"></i> mdi-sync-alert</div>
 
@@ -1307,6 +1375,12 @@
 
         <div class="icons__item" data-name="tram"><i class="mdi mdi-tram"></i> mdi-tram</div>
 
+        <div class="icons__item" data-name="trending-down"><i class="mdi mdi-trending-down"></i> mdi-trending-down</div>
+
+        <div class="icons__item" data-name="trending-neutral"><i class="mdi mdi-trending-neutral"></i> mdi-trending-neutral</div>
+
+        <div class="icons__item" data-name="trending-up"><i class="mdi mdi-trending-up"></i> mdi-trending-up</div>
+
         <div class="icons__item" data-name="trophy-award"><i class="mdi mdi-trophy-award"></i> mdi-trophy-award</div>
 
         <div class="icons__item" data-name="trophy-variant"><i class="mdi mdi-trophy-variant"></i> mdi-trophy-variant</div>
@@ -1333,6 +1407,10 @@
 
         <div class="icons__item" data-name="ubuntu"><i class="mdi mdi-ubuntu"></i> mdi-ubuntu</div>
 
+        <div class="icons__item" data-name="undo-variant"><i class="mdi mdi-undo-variant"></i> mdi-undo-variant</div>
+
+        <div class="icons__item" data-name="undo"><i class="mdi mdi-undo"></i> mdi-undo</div>
+
         <div class="icons__item" data-name="unfold-less"><i class="mdi mdi-unfold-less"></i> mdi-unfold-less</div>
 
         <div class="icons__item" data-name="unfold-more"><i class="mdi mdi-unfold-more"></i> mdi-unfold-more</div>
@@ -1342,6 +1420,8 @@
         <div class="icons__item" data-name="usb"><i class="mdi mdi-usb"></i> mdi-usb</div>
 
         <div class="icons__item" data-name="vector-square"><i class="mdi mdi-vector-square"></i> mdi-vector-square</div>
+
+        <div class="icons__item" data-name="verified"><i class="mdi mdi-verified"></i> mdi-verified</div>
 
         <div class="icons__item" data-name="vibrate"><i class="mdi mdi-vibrate"></i> mdi-vibrate</div>
 
