--- a/preview.html
+++ b/preview.html
@@ -79,7 +79,11 @@
 
         <div class="icons__item" data-name="account-circle"><i class="mdi mdi-account-circle"></i> mdi-account-circle</div>
 
+        <div class="icons__item" data-name="account-key"><i class="mdi mdi-account-key"></i> mdi-account-key</div>
+
         <div class="icons__item" data-name="account-location"><i class="mdi mdi-account-location"></i> mdi-account-location</div>
+
+        <div class="icons__item" data-name="account-minus"><i class="mdi mdi-account-minus"></i> mdi-account-minus</div>
 
         <div class="icons__item" data-name="account-multiple-outline"><i class="mdi mdi-account-multiple-outline"></i> mdi-account-multiple-outline</div>
 
@@ -93,9 +97,19 @@
 
         <div class="icons__item" data-name="account-plus"><i class="mdi mdi-account-plus"></i> mdi-account-plus</div>
 
+        <div class="icons__item" data-name="account-remove"><i class="mdi mdi-account-remove"></i> mdi-account-remove</div>
+
+        <div class="icons__item" data-name="account-search"><i class="mdi mdi-account-search"></i> mdi-account-search</div>
+
+        <div class="icons__item" data-name="account-star-variant"><i class="mdi mdi-account-star-variant"></i> mdi-account-star-variant</div>
+
+        <div class="icons__item" data-name="account-star"><i class="mdi mdi-account-star"></i> mdi-account-star</div>
+
         <div class="icons__item" data-name="account-switch"><i class="mdi mdi-account-switch"></i> mdi-account-switch</div>
 
         <div class="icons__item" data-name="account"><i class="mdi mdi-account"></i> mdi-account</div>
+
+        <div class="icons__item" data-name="airballoon"><i class="mdi mdi-airballoon"></i> mdi-airballoon</div>
 
         <div class="icons__item" data-name="airplane-off"><i class="mdi mdi-airplane-off"></i> mdi-airplane-off</div>
 
@@ -324,6 +338,8 @@
         <div class="icons__item" data-name="broom"><i class="mdi mdi-broom"></i> mdi-broom</div>
 
         <div class="icons__item" data-name="brush"><i class="mdi mdi-brush"></i> mdi-brush</div>
+
+        <div class="icons__item" data-name="bug"><i class="mdi mdi-bug"></i> mdi-bug</div>
 
         <div class="icons__item" data-name="bus"><i class="mdi mdi-bus"></i> mdi-bus</div>
 
@@ -616,6 +632,8 @@
         <div class="icons__item" data-name="file-powerpoint"><i class="mdi mdi-file-powerpoint"></i> mdi-file-powerpoint</div>
 
         <div class="icons__item" data-name="file-presentation-box"><i class="mdi mdi-file-presentation-box"></i> mdi-file-presentation-box</div>
+
+        <div class="icons__item" data-name="file-video"><i class="mdi mdi-file-video"></i> mdi-file-video</div>
 
         <div class="icons__item" data-name="file-word-box"><i class="mdi mdi-file-word-box"></i> mdi-file-word-box</div>
 
@@ -1153,6 +1171,8 @@
 
         <div class="icons__item" data-name="power"><i class="mdi mdi-power"></i> mdi-power</div>
 
+        <div class="icons__item" data-name="presentation"><i class="mdi mdi-presentation"></i> mdi-presentation</div>
+
         <div class="icons__item" data-name="printer"><i class="mdi mdi-printer"></i> mdi-printer</div>
 
         <div class="icons__item" data-name="puzzle"><i class="mdi mdi-puzzle"></i> mdi-puzzle</div>
@@ -1222,6 +1242,8 @@
         <div class="icons__item" data-name="script"><i class="mdi mdi-script"></i> mdi-script</div>
 
         <div class="icons__item" data-name="security"><i class="mdi mdi-security"></i> mdi-security</div>
+
+        <div class="icons__item" data-name="send"><i class="mdi mdi-send"></i> mdi-send</div>
 
         <div class="icons__item" data-name="server-network-off"><i class="mdi mdi-server-network-off"></i> mdi-server-network-off</div>
 
